# datascience-projects

./: .secrets-example.toml  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  settings.toml  sitemap.xml
.github/workflows/: ci.yaml
conf/: config.yaml
conf/datasets/: datasets.yaml
notebooks/eda/: hello_world.ipynb
src/: cli.py  config.py  experiment_definitions.py  hydra_conf.py  logs.py
